--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         />
     </head>
 
-    <body class="bg-light">
-        <header>
+    <body class="bg-light" data-bs-spy="scroll" data-bs-target="#NavbarScroll">
+        <header class="sticky-top bg-light">
         <!-- navbar here (COMPLETED) -->
-            <nav class="navbar bg-body-light navbar-expand-md border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
+            <nav id="NavbarScroll" class="navbar bg-body-light navbar-expand-md border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
                 <div class="container-fluid mb-3">
                     <a class="navbar-brand ms-5" onclick="location.href='./#profile'"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,17 +34,17 @@
                     <div class="collapse navbar-collapse bg-light ms-5 mt-2" id="navbarColor01">
                         <ul class="navbar-nav">
                             <li class="nav-item me-3 mb-1">
-                                <a class="nav-link bold-text" onclick="location.href='./#about'">About Me
+                                <a class="nav-link bold-text" href="#scrollspyHeading1" onclick="location.href='./#about'">About Me
                                 </a>
                             </li>
                             <li class="nav-item me-3 mb-1">
-                                <a class="nav-link bold-text" onclick="location.href='./#experience'">Experience</a>
+                                <a class="nav-link bold-text" href="#scrollspyHeading2" onclick="location.href='./#experience'">Experience</a>
                             </li>
                             <li class="nav-item me-3 mb-1">
-                                <a class="nav-link bold-text" onclick="location.href='./#projects'">Projects</a>
+                                <a class="nav-link bold-text" href="#scrollspyHeading3" onclick="location.href='./#projects'">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link bold-text" onclick="location.href='./#contact'">Contact Me</a>
+                                <a class="nav-link bold-text" href="#scrollspyHeading4" onclick="location.href='./#contact'">Contact Me</a>
                             </li>
 
                         </ul>
@@ -77,10 +77,10 @@
                       <div>
                         <a href="https://github.com/YerkoBizerkohttps://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                           <i class="bi bi-linkedin"><span class="visually-hidden">LinkedIn Icon</span></i>
-                        </a>
+                        </a></btn>
                         <a href="https://github.com/YerkoBizerko" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
                           <i class="bi bi-github"><span class="visually-hidden">Github Icon</span></i>
-                        </a>
+                        </a></btn>
                       </div>
                   </div>
                 </div>
@@ -98,7 +98,7 @@
         <section id="about">
             <div class="container text-center mb-5 pb-5">
                 <p class="mb-1 lead">Pēwhea</p>
-                <h2>About Me</h2>
+                <h2 id="scrollspyHeading1">About Me</h2>
             </div>
 
             <div class="container">
@@ -107,9 +107,9 @@
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-award"></i></h3>
-                        <h5 class="mb-4">Experience</h5>
-                        <p class="mb-1" style="color: white">Frontend & Backend Development</p>
-                        <p class="mb-1" style="color: white">Project Management & SDLC</p>
+                        <h5 class="mb-5">Experience</h5>
+                        <p class="mb-3" style="color: white">Frontend & Backend Development</p>
+                        <p class="mb-3" style="color: white">Project Management & SDLC</p>
                         <p style="color: white">Data Modelling and Normalization</p>
                     </div>
                 </div>
@@ -117,22 +117,30 @@
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-book"></i></h3>
-                        <h5 class="mb-4">Education</h5>
-                        <p class="mb-1" style="color: white">Diploma of Information Sciences</p>
-                        <p style="color: white; height: 52px">Diploma of Software Development (current)</p>
+                        <h5 class="mb-5">Education</h5>
+                        <p class="mb-3" style="color: white">Diploma of Information Systems</p>
+                        <p style="color: white; height: 62px">Diploma of Software Development (current)</p>
                     </div>
                 </div>
-        <!-- Descriptive text -->
-                <div class="text-center col-12 mt-5 p-5">
-                    <p class="fst-italic text-white lead">I'm a developer passionate about building streamlined applications with user friendly design and innate functionality. 
-                        I have a knack for design, UI/UX experience and logical problem solving. My point of difference is my interpersonal & leadership skills, and my ability to generate results under pressure. </p>
-                </div>
+        <!-- Skills Card -->
+        <div class="offset-md-3 col-md-6 col-sm-12 text-center">
+            <div class="card border-info" style="border-radius: 15px">
+                <h3 class="mt-4 text-info"><i class="bi bi-wrench"></i></h3>
+                <h5 class="mb-4">Additional Skills</h5>
+                <p class="mb-3" style="color: white">Design Principles</p>
+                <p class="mb-3" style="color: white">Source/Version Control</p>
+                <p class="mb-3" style="color: white">Workflow optimization</p>
+                <p style="color: white; height: 62px">Development testing</p>
+                
             </div>
         </div>
-
-        <div class="container-fluid">
-            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 mb-5" onclick="location.href='./#experience'">
-            <span class="fst-italic">Explore Experience</span>
+        <!-- Descriptive text -->
+                <div class="text-center col-12 mt-5 p-5">
+                    <p class="fst-italic text-white lead">I'm a developer driven by a passion for crafting streamlined applications with intuitive functionality and user-friendly designs. 
+                        I have an eye for design, UI/UX experience and logical problem solving. My point of difference is my interpersonal & leadership skills, my ability to generate results under pressure; and ensuring my growth-mindset is always switched ON.
+                    </p>
+                </div>
+            </div>
         </div>
         </section>
 
@@ -142,7 +150,7 @@
         <section id="experience">
             <div class="container text-center mb-5 pb-5">
                 <p class="mb-1 lead">Tūmahi wheako</p>
-                <h2>Experience</h2>
+                <h2 id="scrollspyHeading2">Experience</h2>
             </div>
         <!-- Frontend experience card -->
         <div class="container">
@@ -170,11 +178,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="container-fluid">
-            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#projects'">
-            <span class="fst-italic">Browse Projects</span>
-        </div>
         </section>
 
         <div class="col-xs-12" style="height:200px;">
@@ -183,7 +186,7 @@
         <section id="projects">
             <div class="container text-center mb-5 pb-5">
                 <p class="mb-1 lead">Waitara</p>
-                <h2>Projects</h2>
+                <h2 id="scrollspyHeading3">Projects</h2>
             </div>
 
             <div class="container">
@@ -197,14 +200,14 @@
                     border-radius: 15px;">
                         <div>
                             <h4 class="ms-5 fst-italic fw-bold">Pet Paradise Webstore</h5>
-                            <p class="ms-5 mb-0 text-primary fw-bold">HTML | CSS | Bootstrap</p>
+                            <p class="ms-5 mb-0 text-primary fw-bold">HTML5 | CSS | Javascript | Bootstrap</p>
                             <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend project</p>
-                                    <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
-                                    <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
+                                    <a href="https://github.com/YerkoBizerko/Pet_Paradise" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
+                                    <a href="https://yerkobizerko.github.io/Pet_Paradise/" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
                         </div>
                     </div>
                     <div class="container">
-                        <p class="mx-4 mt-3 text-white text-center">A static e-commerce website I developed using many of the latest HTML5 and Bootstrap 5 features such as cards, carousel & new utilities with CSS styling properties.</p>
+                        <p class="mx-4 mt-3 text-white text-center">A static e-commerce website. Developed using many of the latest HTML5 and Bootstrap 5 features such as cards, carousel & new utilities. Designed with CSS styling properties and Javascript for functionality.</p>
                     </div>
                 </div>
         <!-- Quicksilver -->
@@ -217,24 +220,24 @@
                         <div>
                             <h4 class="ms-5 fst-italic fw-bold">Quiksilver</h5>
                             <p class="ms-5 mb-0 text-primary fw-bold">.NET | C#</p>
-                            <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
-                                    <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
-                                    <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
+                            <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Work in progress</p>
+                                    <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Coming soon</button>
+                                    <!--<button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Coming soon</button>-->
                         </div>
                     </div>
                     <div class="container">
-                        <p class="mt-3 text-white text-center">A Windows Form App I developed as a quick, reliable registration system. Built utilizing .NET built-in styling and C# logic.</p>
+                        <p class="mt-3 text-white text-center">A Windows Form App I developed as a quick and reliable visitor registration system. Built utilizing .NET built-in styling and C# logic.</p>
                     </div>
                 </div>
         <!-- Sweet As Sound -->
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
             <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-bottom-0" style="
-            background-image: url('./Images/Untitled\ design\ \(1\).png');
+            background-image: url('./Images/Untitled\ design\ \(3).png');
             background-size: cover;
             height: 300px;
             border-radius: 15px;">
                 <div>
-                    <h4 class="ms-5 fst-italic fw-bold">Sweet As Sound</h5>
+                    <h4 class="ms-5 fst-italic fw-bold">Sanctuary of Sound</h5>
                     <p class="ms-5 mb-0 text-primary fw-bold">.NET | C# | SQL</p>
                     <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
                             <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
@@ -242,14 +245,10 @@
                 </div>
             </div>
             <div class="container">
-                <p class="mx-4 mt-3 text-white text-center">This project was developed using .NET built-in styling, C# logic, SQL databases and EFCore to manipulate data. It functions as a media player; requiring a user to register while passing validation checks. Supports external accessibility.</p>
+                <p class="mx-4 mt-3 text-white text-center">This is a CRUD application developed using the .NET application builder, C# logic, SQL databases and EFCore to manipulate data. Once the user has registered an account, It functions as a media player.</p>
             </div>
         </div>
         </section>
-        <div class="container-fluid mt-5">
-            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#contact'">
-            <span class="fst-italic">Contact Me</span>
-        </div>
 
         <div class="col-xs-12" style="height:200px;">
         </div>
@@ -259,7 +258,7 @@
             <div class="container">
             <div class="row gy-5">
                 <div class="col-xl-8 col-lg-8 col-md-7 col-sm-12">
-                    <h2>Let's talk.<br>I love opportunities to grow.</h5>
+                    <h2 id="scrollspyHeading4">Let's talk.<br>I seek opportunities to grow.</h5>
                     <p class="mb-5 fst-italic">It's my chance to change the world.</p>
                     <div class="d-flex align-items-center">
                         <i class="bi bi-phone-vibrate me-3 text-info h3"></i>
@@ -301,11 +300,11 @@
         </section>
         </main>
         <footer>
-            <!-- footer here -->
+             <!-- footer here -->
             <div class="col-xs-12 border-top border-secondary" style="height:1px;">
             </div>
   
-          <div class="text-center mt-3">
+          <div class="text-center mt-5">
             <btn type="button" onclick="location.href='./#profile'"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
             <div class="text-center mb-3 mt-3">
               <a href="https://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
@@ -320,7 +319,7 @@
           </div>
   
           <div class="text-center p-3">
-            © 2024 Copyright: Sione Yerkovich. All rights Reserved.
+            © 2025 Copyright: Sione Yerkovich. All rights Reserved.
           </div>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
